[gd_scene load_steps=35 format=3 uid="uid://u6okdsefflug"]

[ext_resource type="Script" path="res://Game.gd" id="3"]
[ext_resource type="Script" path="res://Rooms.gd" id="4"]
[ext_resource type="Theme" uid="uid://b0askjdx1bs38" path="res://Theme.tres" id="4_usvbv"]
[ext_resource type="Script" path="res://ui/UI.gd" id="5_c0f27"]
[ext_resource type="TileSet" uid="uid://b6ahcd27jnf2v" path="res://Rooms/TileSet.tres" id="6_ml8df"]
[ext_resource type="Script" path="res://ui/PauseMenu.gd" id="11_7bikg"]
[ext_resource type="Script" path="res://ui/MiniMap.gd" id="12_icbnv"]
[ext_resource type="Texture2D" uid="uid://bp6rbf2gw15f5" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/ui/button_normal_x2_size.png" id="12_sjsnb"]
[ext_resource type="Texture2D" uid="uid://bs075q8gb23ih" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/ui/button_hover_x2_size.png" id="13_8cbgv"]
[ext_resource type="Script" path="res://ui/MinimapScrollContainer.gd" id="13_f54tc"]
[ext_resource type="FontFile" uid="uid://drbvct1q4mkwc" path="res://Fonts/Alkhemikal.ttf" id="13_kxa6p"]
[ext_resource type="Texture2D" uid="uid://cm2mxt7vas7t4" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/ui/minimap_9-patch_bigger.png" id="13_s3von"]
[ext_resource type="Shader" path="res://shaders_and_particles/IntensityToTransparency.gdshader" id="14_qjw3b"]
[ext_resource type="Texture2D" uid="uid://c7w1c828j4ok0" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/ui/button_pressed_x2_size.png" id="14_uupl3"]
[ext_resource type="Script" path="res://ui/ButtonWithSound.gd" id="15_2ikhu"]
[ext_resource type="Texture2D" uid="uid://bl8w6y7gf8ubx" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/ui/icon_map.png" id="16_0uph7"]
[ext_resource type="Script" path="res://ui/SettingsButton.gd" id="16_gpdwi"]
[ext_resource type="Script" path="res://ui/QuitButton.gd" id="17_iw01m"]
[ext_resource type="FontVariation" uid="uid://du8fthyvf666a" path="res://Fonts/small_font.tres" id="18_beacm"]
[ext_resource type="Script" path="res://ui/PauseWeaponInventory.gd" id="19_0wxa2"]
[ext_resource type="Script" path="res://Components/auto_focus_on_controller.gd" id="20_o0kce"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jgpg2"]
light_mode = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oed6k"]
texture = ExtResource("13_s3von")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="LabelSettings" id="LabelSettings_lngc4"]
font = ExtResource("13_kxa6p")
font_color = Color(0.243137, 0.137255, 0.00784314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_th65t"]
texture = ExtResource("12_sjsnb")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3sayf"]
texture = ExtResource("13_8cbgv")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tp6a3"]
texture = ExtResource("14_uupl3")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y8rbg"]
texture = ExtResource("12_sjsnb")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f6fwb"]
texture = ExtResource("13_8cbgv")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g8g7y"]
texture = ExtResource("14_uupl3")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kfyp7"]
texture = ExtResource("12_sjsnb")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e2ln6"]
texture = ExtResource("13_8cbgv")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7tqsm"]
texture = ExtResource("14_uupl3")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nogqy"]
shader = ExtResource("14_qjw3b")
shader_parameter/color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("3")
debug = false
execute_procedural_generation_on_thread = false

[node name="Rooms" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("4")
num_levels = 3

[node name="CorridorTileMap" type="TileMap" parent="Rooms"]
z_index = 1
material = SubResource("CanvasItemMaterial_jgpg2")
tile_set = ExtResource("6_ml8df")
format = 2
layer_0/z_index = -1
layer_1/name = "Bottom walls"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.317647, 0.317647, 0.317647, 1)

[node name="GeneratingDungeonCanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="GeneratingDungeonCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="Label" type="Label" parent="GeneratingDungeonCanvasLayer"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -8.0
offset_right = 72.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_usvbv")
text = "GENERATING_DUNGEON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
layer = 2
script = ExtResource("5_c0f27")

[node name="ColorRect" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.384314)

[node name="MiniMap" type="Popup" parent="UI"]
unique_name_in_owner = true
disable_3d = true
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(330, 200)
content_scale_mode = 1
content_scale_aspect = 3
script = ExtResource("12_icbnv")

[node name="MinimapScrollContainer" type="ScrollContainer" parent="UI/MiniMap"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -100.0
offset_right = 165.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
script = ExtResource("13_f54tc")

[node name="PanelContainer" type="PanelContainer" parent="UI/MiniMap/MinimapScrollContainer"]
custom_minimum_size = Vector2(330, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_oed6k")

[node name="MarginContainer" type="MarginContainer" parent="UI/MiniMap/MinimapScrollContainer/PanelContainer"]
custom_minimum_size = Vector2(5000, 5000)
layout_mode = 2

[node name="MapNameLabel" type="Label" parent="UI/MiniMap/MinimapScrollContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "hahaha"
label_settings = SubResource("LabelSettings_lngc4")

[node name="PlayerIcon" type="Sprite2D" parent="UI/MiniMap/MinimapScrollContainer/PanelContainer"]
z_index = 5
texture = ExtResource("16_0uph7")

[node name="UpdateFogTimer" type="Timer" parent="UI/MiniMap"]
wait_time = 0.7

[node name="PauseMenu" type="Control" parent="UI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("11_7bikg")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -70.0
offset_right = 68.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(68, 70)
size_flags_vertical = 4
theme = ExtResource("4_usvbv")

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_th65t")
theme_override_styles/hover = SubResource("StyleBoxTexture_3sayf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tp6a3")
text = "RESUME"
script = ExtResource("15_2ikhu")

[node name="SettingsButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_y8rbg")
theme_override_styles/hover = SubResource("StyleBoxTexture_f6fwb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_g8g7y")
text = "SETTINGS"
script = ExtResource("16_gpdwi")

[node name="QuitButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_kfyp7")
theme_override_styles/hover = SubResource("StyleBoxTexture_e2ln6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7tqsm")
text = "QUIT"
script = ExtResource("17_iw01m")

[node name="MarginContainer" type="MarginContainer" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -13.0
offset_bottom = 8.0
grow_horizontal = 0
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4

[node name="SeedLabel" type="Label" parent="UI/PauseMenu/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("18_beacm")
theme_override_font_sizes/font_size = 10

[node name="Inventory" type="HBoxContainer" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -1
alignment = 1
script = ExtResource("19_0wxa2")

[node name="AutoFocusOnController" type="Node" parent="UI/PauseMenu"]
script = ExtResource("20_o0kce")

[node name="FogSprite" type="Sprite2D" parent="."]
z_index = 3
material = SubResource("ShaderMaterial_nogqy")
centered = false

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = &"Music"
